project git 계정 생성 내용 추가

--- a/ProjectManagement/2019-04-03_Todo.md
+++ b/ProjectManagement/2019-04-03_Todo.md
@@ -9,5 +9,7 @@
 - [ ]   Colab  : assigned to 정인창  -> 다시 시도, gdrive 용량 부족, 유료로 용량 3,700/달 
 
 ### git for project용
-- [ ]   https://github.com/brainmining-for-bigdata/project-text2speech-blog
+- [X]   project git 계정 생성 : https://github.com/brainmining-for-bigdata/ 
+- [ ]   project blog repository생성 : https://github.com/brainmining-for-bigdata/project-text2speech-blog
+
 
